<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">EShopper</string>
    <string name="hello">Hello World!</string>
    <string name="vn">VN</string>
    <string name="en">EN</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="setting">Setting</string>
    <string name="profile">Profile</string>
    <string name="email">Email</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="password">Password</string>
    <string name="errorEmail">The email address is badly formatted</string>
    <string name="you_don_t_have_account">You don\'t have account ?</string>
    <string name="you_have_account">You have account?</string>
    <string name="register_failed">Register failed</string>
    <string name="fullname">Full name</string>
    <string name="confirm">Confirm password</string>
    <string name="loginFailed">Login failed</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="order">Order</string>
    <string name="category">Category</string>
    <string name="log_out">Log Out</string>
    <string name="exit">Click twice in a row to exit the app</string>
    <string name="history">History</string>
    <string name="home">Home</string>
    <string name="laptop">Laptop</string>
    <string name="phone">Phone</string>
    <string name="tv">TV</string>
    <string name="fridge">Fridge</string>
    <string name="manage">Manage</string>
    <string name="statistic">Statistic</string>
    <string name="product">Product</string>
    <string name="add_category">Add category</string>
    <string name="name_category">Name of Category</string>
    <string name="image">Image</string>
    <string name="save">Save</string>
    <string name="income">Income</string>
    <string name="add_product">Add Product</string>
    <string name="detail_product">Product Detail\n</string>

    // Button

    <string name="button">Save</string>
    <string name="line">--------------------------</string>
    <string name="amount">Amount</string>
    <string name="name_product">Name product</string>
    <string name="type">Type</string>
    <string name="description">Description</string>
    <string name="price_product">Price product</string>
    <string name="productDetail">Product Detail\n</string>
    <string name="detail_category">Detail Category</string>
    <string name="reset_account">Reset Account</string>
    <string name="continues">Continue</string>
    <string name="version">Version 1.0</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change password</string>
    <string name="contact">Contact</string>
    <string name="email_amp_password"><![CDATA[Email & Password]]></string>
    <string name="settings">Settings</string>
    <string name="facebook">Facebook</string>
    <string name="github">Github</string>
    <string name="youtube">Youtube</string>
    <string name="instagram">Instagram</string>
    <string name="update_profile">Update Profile</string>
    <string name="avatar">Avatar</string>
    <string name="saves">Save</string>
    <string name="number_phone">Number Phone</string>
    <string name="current_email">Current Email</string>
    <string name="new_email">NEW EMAIL</string>
    <string name="cart">Cart</string>
    <string name="current_password">Current Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sum_payment">Sum payment</string>
    <string name="payment">Thanh toán</string>
    <string name="address">Adress</string>
    <!-- TODO: Remove or change this placeholder text -->

</resources>