<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".users.settings.ChangeEmailFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView_back"
            android:layout_width="@dimen/_25sdp"
            android:layout_height="@dimen/_25sdp"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:padding="@dimen/_2sdp"
            android:src="@drawable/back"
            app:tint="@color/tint_secondary" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:text="@string/change_email"
            android:textColor="@color/tint_primary"
            android:textSize="@dimen/_34ssp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_35sdp"
            android:layout_marginTop="@dimen/_15sdp"
            android:text="@string/current_email"
            android:textColor="@color/tint_secondary"
            android:textStyle="bold" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:backgroundTint="@color/background_grouped_primary"
            app:cardCornerRadius="@dimen/_10sdp"
            app:cardElevation="0dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:paddingHorizontal="@dimen/_15sdp"
                android:paddingVertical="@dimen/_12sdp"
                android:weightSum="10">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/_16sdp"
                    android:layout_weight="0"
                    android:src="@drawable/email"
                    app:tint="@color/tint_primary" />

                <TextView
                    android:id="@+id/textView_currentEmail"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_marginHorizontal="@dimen/_10sdp"
                    android:layout_weight="10"
                    android:textColor="@color/tint_primary"
                    android:textSize="@dimen/_12ssp" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_35sdp"
            android:layout_marginTop="@dimen/_15sdp"
            android:text="@string/password"
            android:textColor="@color/tint_secondary"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editText_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:background="@drawable/custom_input"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="15dp"
            android:textColorHint="@color/tint_tertiary" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_35sdp"
            android:layout_marginTop="@dimen/_15sdp"
            android:text="@string/new_email"
            android:textColor="@color/tint_secondary"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editText_newEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:background="@drawable/custom_input"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:padding="15dp"
            android:textColorHint="@color/tint_tertiary" />

        <TextView
            android:id="@+id/textView_error"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="15dp"
            android:textColor="@color/red"
            android:visibility="gone" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_save"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_marginBottom="@dimen/_20sdp"
            android:background="@drawable/custom_button"
            android:padding="20dp"
            android:text="@string/saves"
            android:textAllCaps="false"
            android:textSize="18sp"
            />

    </LinearLayout>

</LinearLayout>