<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".auth.ForgotPasswordFragment">

    <ImageView
        android:id="@+id/imageBack"
        android:layout_width="@dimen/_25sdp"
        android:layout_height="@dimen/_25sdp"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_15sdp"
        android:padding="@dimen/_2sdp"
        android:src="@drawable/back"
        app:tint="@color/tint_secondary"
        />

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_below="@id/imageBack"
        android:layout_marginTop="@dimen/_10sdp"
        android:padding="@dimen/_2sdp"
        android:text="@string/reset_account"
        android:layout_marginBottom="@dimen/_15sdp"
        android:textColor="@color/tint_primary"
        android:textSize="@dimen/_25ssp" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_below="@id/title"
        android:id="@+id/layoutEmail"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_50sdp"
        android:layout_marginHorizontal="@dimen/_20sdp"
        android:layout_marginBottom="@dimen/_10sdp"
        app:boxStrokeColor="@color/tint_secondary"
        app:hintEnabled="false">

        <EditText
            android:id="@+id/emailEt"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@drawable/custom_input"
            android:ems="1"
            android:textColorHint="@color/tint_secondary"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:padding="10dp"
            android:textColor="@color/tint_secondary"
            android:textSize="@dimen/_14ssp" />

    </com.google.android.material.textfield.TextInputLayout>
    <TextView
        android:id="@+id/errorEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_20sdp"
        android:text="Lỗi rồi mấy chế ơi"
        android:textSize="@dimen/_14sdp"
        android:textColor="@color/red"
        android:layout_marginBottom="@dimen/_10sdp"
        android:gravity="center"
        android:layout_below="@id/layoutEmail"
        android:visibility="gone" />

    <androidx.appcompat.widget.AppCompatButton
        android:layout_below="@id/errorEmail"
        android:id="@+id/reset"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_48sdp"
        android:enabled="false"
        android:layout_marginHorizontal="@dimen/_20sdp"
        android:text="@string/continues"
        android:textAllCaps="false"
        android:background="@drawable/custom_button"
        android:textSize="@dimen/_14ssp" />


</RelativeLayout>