<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/background_primary"
    tools:context=".admin.main.AdminHomeFragment">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/title"
        android:text="@string/manage"
        android:gravity="center"
        android:textStyle="bold"
        android:layout_marginTop="@dimen/_20sdp"
        android:textSize="@dimen/_36ssp"
        android:textColor="@color/tint_secondary"
        />
    <LinearLayout
        android:id="@+id/l1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="150dp">
        <com.google.android.material.card.MaterialCardView
            android:id="@+id/order"
            android:layout_width="0dp"
            android:layout_height="@dimen/_150sdp"
            android:layout_margin="@dimen/_10sdp"
            android:layout_weight="1"
            app:cardCornerRadius="5dp"
            app:cardElevation="5dp">
            <LinearLayout
                android:layout_width="@dimen/_150sdp"
                android:layout_height="@dimen/_150sdp"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="vertical"
                >
                <ImageView
                    android:layout_width="@dimen/_70sdp"
                    android:layout_height="@dimen/_70sdp"
                    android:layout_gravity="center"
                    android:src="@drawable/deliverytruck"/>

                <TextView
                    android:id="@+id/hoadon"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:text="@string/order"
                    android:gravity="center"
                    android:textColor="@color/tint_secondary"
                    android:textSize="@dimen/_18ssp"
                    android:textStyle="bold"/>

            </LinearLayout>


        </com.google.android.material.card.MaterialCardView>
        <com.google.android.material.card.MaterialCardView
            android:id="@+id/statistic"
            android:layout_width="0dp"
            android:layout_height="@dimen/_150sdp"
            android:layout_margin="@dimen/_10sdp"
            android:layout_weight="1"
            app:cardCornerRadius="5dp"
            app:cardElevation="5dp">
            <LinearLayout
                android:layout_width="@dimen/_150sdp"
                android:layout_height="@dimen/_150sdp"
                android:gravity="center"
                android:layout_gravity="center"
                android:orientation="vertical"
                >
                <ImageView
                    android:layout_width="@dimen/_70sdp"
                    android:layout_height="@dimen/_70sdp"
                    android:layout_gravity="center"
                    android:src="@drawable/charts"/>

                <TextView
                    android:id="@+id/thongke"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:text="@string/statistic"
                    android:gravity="center"
                    android:textColor="@color/tint_secondary"
                    android:textSize="@dimen/_18ssp"
                    android:textStyle="bold"/>

            </LinearLayout>


        </com.google.android.material.card.MaterialCardView>

    </LinearLayout>

    <LinearLayout
        android:layout_below="@id/l1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/l2"
        android:layout_marginTop="@dimen/_3sdp"
        android:gravity="center"
        >
        <com.google.android.material.card.MaterialCardView
            android:id="@+id/product"
            android:layout_width="0dp"
            android:layout_height="@dimen/_150sdp"
            android:layout_margin="@dimen/_10sdp"
            android:layout_weight="1"
            app:cardCornerRadius="5dp"
            app:cardElevation="5dp">
            <LinearLayout
                android:layout_width="@dimen/_150sdp"
                android:layout_height="@dimen/_150sdp"
                android:gravity="center"
                android:layout_gravity="center"

                android:orientation="vertical"
                >
                <ImageView
                    android:layout_width="@dimen/_70sdp"
                    android:layout_height="@dimen/_70sdp"
                    android:layout_gravity="center"
                    android:src="@drawable/product"/>

                <TextView
                    android:id="@+id/productTv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:text="@string/product"
                    android:gravity="center"
                    android:textColor="@color/tint_secondary"
                    android:textSize="@dimen/_18ssp"
                    android:textStyle="bold"/>

            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>
        <com.google.android.material.card.MaterialCardView
            android:id="@+id/category"
            android:layout_width="0dp"
            android:layout_height="@dimen/_150sdp"
            android:layout_margin="@dimen/_10sdp"
            android:layout_weight="1"
            app:cardCornerRadius="5dp"
            app:cardElevation="5dp">
            <LinearLayout
                android:layout_width="@dimen/_150sdp"
                android:layout_height="@dimen/_150sdp"
                android:gravity="center"
                android:layout_gravity="center"
                android:orientation="vertical"
                >
                <ImageView
                    android:layout_width="@dimen/_70sdp"
                    android:layout_height="@dimen/_70sdp"
                    android:layout_gravity="center"
                    android:src="@drawable/list"/>

                <TextView
                    android:id="@+id/categoryTv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:text="@string/category"
                    android:gravity="center"
                    android:textColor="@color/tint_secondary"
                    android:textSize="@dimen/_18ssp"
                    android:textStyle="bold"/>

            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>

    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:layout_alignParentBottom="true"
        android:id="@+id/logout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_20sdp"
        android:layout_marginBottom="@dimen/_30sdp"
        android:backgroundTint="@color/background_grouped_primary"
        android:elevation="0dp"
        app:cardCornerRadius="@dimen/_10sdp"
        app:cardElevation="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:paddingHorizontal="@dimen/_15sdp"
            android:paddingVertical="@dimen/_10sdp"
            android:weightSum="10">

            <LinearLayout
                android:layout_width="@dimen/_30sdp"
                android:gravity="center"
                android:layout_height="match_parent">


                <ImageView
                    android:id="@+id/imageViewLogout"
                    android:layout_width="@dimen/_30sdp"
                    android:layout_height="@dimen/_30sdp"
                    android:src="@drawable/logout"
                    app:tint="@color/red"
                    android:scaleType="centerCrop" />



            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="9"
                android:orientation="vertical"
                android:weightSum="2">

                <TextView
                    android:id="@+id/textViewLogout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginHorizontal="@dimen/_20sdp"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:gravity="center_vertical"
                    android:text="@string/log_out"
                    android:textColor="@color/tint_secondary"
                    android:textSize="@dimen/_14ssp" />
            </LinearLayout>


        </LinearLayout>

    </androidx.cardview.widget.CardView>



</RelativeLayout>