<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/background_primary"
    tools:context=".admin.main.AdminStaticsFragment">

    <LinearLayout
        android:id="@+id/layoutHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/imageBack"
            android:layout_width="@dimen/_25sdp"
            android:layout_height="@dimen/_25sdp"
            android:layout_marginStart="@dimen/_10sdp"
            android:padding="@dimen/_2sdp"
            android:gravity="center"
            android:layout_marginVertical="@dimen/_10sdp"
            android:src="@drawable/back"
            app:tint="@color/tint_secondary"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/_10sdp"
            android:layout_marginHorizontal="@dimen/_10sdp"
            android:layout_gravity="center"
            android:text="@string/statistic"
            android:padding="@dimen/_2sdp"
            android:textSize="@dimen/_16ssp"
            android:textColor="@color/tint_primary"
            />

    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/separator_primary"
        android:layout_below="@id/layoutHeader"
        android:id="@+id/line"

        />

    <LinearLayout
        android:id="@+id/l1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_marginTop="150dp">
        <com.google.android.material.card.MaterialCardView
            android:id="@+id/order"
            android:layout_width="195dp"
            android:layout_height="@dimen/_150sdp"
            android:layout_margin="@dimen/_10sdp"
            android:layout_weight="1"
            app:cardCornerRadius="5dp"
            app:cardElevation="5dp">
            <LinearLayout
                android:layout_width="@dimen/_150sdp"
                android:layout_height="@dimen/_150sdp"
                android:gravity="center"
                android:orientation="vertical"
                >
                <ImageView
                    android:layout_width="@dimen/_70sdp"
                    android:layout_height="@dimen/_70sdp"
                    android:src="@drawable/piechart"/>

                <TextView
                    android:id="@+id/hoadon"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:text="@string/order"
                    android:gravity="center"
                    android:textColor="@color/tint_secondary"
                    android:textSize="@dimen/_18ssp"
                    android:textStyle="bold"/>

            </LinearLayout>


        </com.google.android.material.card.MaterialCardView>
        <com.google.android.material.card.MaterialCardView
            android:id="@+id/statistic"
            android:layout_width="195dp"
            android:layout_height="@dimen/_150sdp"
            android:layout_margin="@dimen/_10sdp"
            android:layout_weight="1"
            app:cardCornerRadius="5dp"
            app:cardElevation="5dp">
            <LinearLayout
                android:layout_width="@dimen/_150sdp"
                android:layout_height="@dimen/_150sdp"
                android:gravity="center"
                android:orientation="vertical"
                >
                <ImageView
                    android:layout_width="@dimen/_70sdp"
                    android:layout_height="@dimen/_70sdp"
                    android:layout_gravity="center"
                    android:src="@drawable/moneychart"/>

                <TextView
                    android:id="@+id/thongke"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:text="@string/income"
                    android:gravity="center"
                    android:textColor="@color/tint_secondary"
                    android:textSize="@dimen/_18ssp"
                    android:textStyle="bold"/>

            </LinearLayout>


        </com.google.android.material.card.MaterialCardView>

    </LinearLayout>


</RelativeLayout>